# OS-Homeworks

./: CMakeLists.txt  MultipleForksAndExecs.c  SimpleForkAndExec.c  test.txt
Forks/: ForkAndExecWithCLA.c  utils.h
Threads/: ArrayWithThreads.c  CMakeLists.txt  PrintingNumbersWithThreads.c  SquareOfNumbers.c  ThreadCreation.c
