cmake_minimum_required(VERSION 3.30)
project(OS_Homeworks C)

set(CMAKE_C_STANDARD 11)

add_executable(ThreadCreation ThreadCreation.c)
add_executable(ArrayWithThreads ArrayWithThreads.c)
add_executable(PrintingNumbersWithThreads PrintingNumbersWithThreads.c)
add_executable(SquareOfNumbers SquareOfNumbers.c)
